# pytest-automation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: main-tests.yml  pr-quality.yml
config/: config.ini
drivers/: driver_factory.py
pages/: base_page.py  login_page.py  navigation_page.py  products_page.py
testdata/: login_data.csv
tests/: conftest.py  test_login.py  test_login_datadriven.py  test_login_error.py
utils/: data_reader.py  diagnostics.py  retry.py
